# droidbot

./: .gitlab-ci.yml  pyproject.toml  ruff.toml
droidbot/: __main__.py  app.py  device.py  device_state.py  droidbot.py  droidmaster.py  env_manager.py  input_event.py  input_manager.py  input_policy.py  input_policy2.py  utg.py  utils.py
droidbot/adapter/: adb.py  droidbot.py  droidbot_app.py  qemu.py
